# Bash-Adventure

./: CMakeLists.txt  MainMap.c  MainMenu.c  MenuPrincipal.c  Option.c  README.md  SqueletteMEnu.c  TestPlateau.c  commands.md  links.md  map1.c  requirements.md
res/map/: map-louis-test.txt
res/sauvegardes/: banner.txt  sauvegarde.csv  sauvegarde.txt
src/: main.c
src/julio/: A FAIRE  actions.h  entity.h  inventaire.h  item.h  main.h  mob.h  monde.h  player.h  testJ.c
src/louis/: FonctionsFichier.h  Menu  Q-learning.c  Sauvegarde.c  Sauvegarde.h  SqueletteMEnu.c  bot  bot.c  chargerPartie.h  choose_perso  choose_perso.c  commands.md  fileman  form  formulaire.h  game  game.c  menu-av  menu-av.c  menu1  menu1.c  menugame.h  models  modelsMap.c  plateau.c  sauv1.txt  sauve  test-map3.c  utils.h
src/louis/trash/: bot.c  charger_partie  choose_perso  choose_perso.c  filemana  findmax.c  game  menu  menu-av  menu-av.c  menu.c  menu1.c  menubeta  menugame.h  modelsMap  modelsMap.c  panel  panel.c  plateau  plateau.c  test-map.c  test.txt  test3  testmap
test/: machine_Learning_like.c  paysage_animation.c  sprite.c  test.md
